--- a/src/assets/scss/core/_general.scss
+++ b/src/assets/scss/core/_general.scss
@@ -91,6 +91,14 @@
     text-align: center !important;
 }
 
+.align-end {
+    text-align: end;
+}
+
+.align-start {
+    text-align: start;
+}
+
 .pos-relative {
     position: relative;
 }
