--- a/src/components/AddressInfoBox/_style.scss
+++ b/src/components/AddressInfoBox/_style.scss
@@ -36,7 +36,7 @@
             }
         }
 
-        .metamask-account-active {
+        .account-active {
             top: 10px;
         }
     }
