Active account style

--- a/src/components/AccountName/_style.scss
+++ b/src/components/AccountName/_style.scss
@@ -45,7 +45,7 @@
         }
     }
 
-    .metamask-account-active {
+    .account-active {
         position: absolute;
         top: 4px;
         left: -18px;
