--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -28,6 +28,7 @@
 @import "actions-box";
 @import "windows";
 @import "funiswap";
+//@import "walletlink";
 //@include flexbox-layout(24);
 
 //@include media-max($bp-menu) {
