Adjust css to work properly with rtl direction

--- a/src/assets/scss/_fcard-window.scss
+++ b/src/assets/scss/_fcard-window.scss
@@ -28,6 +28,15 @@
     }
 }
 
+html[dir="rtl"], body[dir="rtl"] {
+    .f-card:not(.off).window {
+        .footer {
+            left: unset;
+            right: 0;
+        }
+    }
+}
+
 @include media-max($bp-small) {
     .f-card:not(.off).window {
         .header {
