--- a/src/components/AccountActionsBox/_style.scss
+++ b/src/components/AccountActionsBox/_style.scss
@@ -9,7 +9,7 @@
                 }
 
                 + li {
-                    margin-left: 16px;
+                    margin-inline-start: 16px;
                 }
             }
         }
