--- a/src/components/DefiMenu/_style.scss
+++ b/src/components/DefiMenu/_style.scss
@@ -64,7 +64,7 @@
             min-height: 64px;
             margin: 24px auto 0 auto;
             //color: #2b3954;
-            //text-align: left;
+            //text-align: start;
         }
     }
 
