--- a/src/components/GovProposalDetail/_style.scss
+++ b/src/components/GovProposalDetail/_style.scss
@@ -78,7 +78,7 @@
     &__vote {
         font-weight: bold;
         font-size: 21px;
-        text-align: right;
+        text-align: end;
     }
 
     &__winner {
