--- a/src/components/InstallationInfo/_style.scss
+++ b/src/components/InstallationInfo/_style.scss
@@ -11,7 +11,7 @@
             width: 100%;
 
             svg {
-                margin-right: 8px;
+                margin-inline-end: 8px;
             }
         }
     }
