--- a/src/components/core/FEllipsis/_style.scss
+++ b/src/components/core/FEllipsis/_style.scss
@@ -9,7 +9,7 @@
 
     &.overflow-start {
         direction: rtl;
-        text-align: left;
+        text-align: start;
     }
 
     &.overflow-middle {
@@ -30,7 +30,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             direction: rtl;
-            text-align: left;
+            text-align: start;
         }
 
         &.f-ellipsis-align-right {
