--- a/src/components/core/FSelectButton/_style.scss
+++ b/src/components/core/FSelectButton/_style.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
     border: none;
     border-bottom: var(--f-select-button-border-bottom);
-    text-align: left;
+    text-align: start;
     margin: 0;
     background: none;
     color: inherit;
