--- a/src/components/core/FWindow/_style.scss
+++ b/src/components/core/FWindow/_style.scss
@@ -46,19 +46,19 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
-            padding-right: 1rem;
+            padding-inline-end: 1rem;
             outline: none;
 
             h1, h2, h3, h4, h5 {
                 margin-bottom: 0;
                 text-align: center;
-                padding-left: 36px;
+                padding-inline-start: 36px;
             }
         }
 
         .controls {
             white-space: nowrap;
-            margin-left: auto;
+            margin-inline-start: auto;
 
             > * {
                 display: inline-block;
@@ -69,10 +69,10 @@
     &.no-controls {
         header {
             .title {
-                padding-right: 0;
+                padding-inline-end: 0;
 
                 h1, h2, h3, h4, h5 {
-                    padding-left: 0;
+                    padding-inline-start: 0;
                 }
             }
         }
@@ -142,6 +142,32 @@
 
             .body {
                 //padding: var(--f-window-popover-body-padding-with-header);
+            }
+        }
+    }
+}
+
+html[dir="rtl"], body[dir="rtl"] {
+    .f-window {
+        &.with-header {
+            &.no-title {
+                header {
+                    .controls {
+                        right: unset;
+                        left: 16px;
+                    }
+                }
+            }
+        }
+
+        &.with-header {
+            &.no-title {
+                header {
+                    .controls {
+                        right: unset;
+                        left: 8px;
+                    }
+                }
             }
         }
     }
