--- a/src/assets/scss/_funiswap.scss
+++ b/src/assets/scss/_funiswap.scss
@@ -40,7 +40,7 @@
 
             .v-spinner {
                 display: inline-block;
-                margin-left: 4px;
+                margin-inline-start: 4px;
             }
         }
 
@@ -74,19 +74,19 @@
             }
 
             .max-amount {
-                margin-right: 8px;
+                margin-inline-end: 8px;
             }
         }
     }
 
     &__select-token-btn {
         &.small {
-            padding-right: 0;
+            padding-inline-end: 0;
         }
 
         svg {
-            margin-right: 0;
-            margin-left: 8px;
+            margin-inline-end: 0;
+            margin-inline-start: 8px;
         }
     }
 
@@ -109,5 +109,14 @@
         position: relative;
         top: -2px;
         right: -2px;
+    }
+}
+
+html[dir="rtl"], body[dir="rtl"] {
+    .funiswap {
+        .uniswap-f-info {
+            right: unset;
+            left: -2px;
+        }
     }
 }
