--- a/src/assets/scss/_windows.scss
+++ b/src/assets/scss/_windows.scss
@@ -53,7 +53,7 @@
     }
 
     .steps {
-        padding-left: 24px;
+        padding-inline-start: 24px;
 
         .count {
             opacity: 0.6;
@@ -93,6 +93,21 @@
             .body {
                 --f-window-padding-with-header: 24px;
                 --f-window-body-padding-with-header: 0 var(--f-window-padding-with-header) var(--f-window-padding-with-header) var(--f-window-padding-with-header);
+            }
+        }
+    }
+}
+
+html[dir="rtl"], body[dir="rtl"] {
+    .f-window {
+        &.popover.light {
+            &.popover-menu {
+                &.no-title {
+                    .close-btn {
+                        right: unset;
+                        left: 8px;
+                    }
+                }
             }
         }
     }
