--- a/src/assets/scss/core/_form-elements.scss
+++ b/src/assets/scss/core/_form-elements.scss
@@ -122,7 +122,7 @@ select:not(.def) {
     background-position: calc(100% - 12px) 50%;
     background-repeat: no-repeat;
     background-image: var(--f-select-background-image);
-    padding-right: 40px;
+    padding-inline-end: 40px;
 }
 
 select:not(.def).small {
@@ -137,4 +137,9 @@ select:not(.def)[disabled] {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9"><path style="fill: rgb(180,180,180);" id="chevron-medium-big-4-01" d="M128,160v3l6,6,6-6v-2.952l-6,6Z" transform="translate(-128 -160)"/></svg>');
 }
 
+html[dir="rtl"], body[dir="rtl"] {
+    select:not(.def) {
+        background-position: 12px 50%;
+    }
+}
 /** checkbox/radio tady - prepracovat trochu **/
