--- a/src/components/AccountList/_style.scss
+++ b/src/components/AccountList/_style.scss
@@ -20,8 +20,8 @@
 
     .f-card {
         height: 100%;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-inline-start: 30px;
+        padding-inline-end: 30px;
 
         &:not(.off) {
             .label {
@@ -53,7 +53,7 @@
             //position: relative;
             display: block;
 
-            padding-right: 32px;
+            padding-inline-end: 32px;
 
             button.btn-edit, .f-copy-button {
                 position: absolute;
@@ -70,7 +70,7 @@
         .f-card {
             &:not(.off) {
                 .label {
-                    padding-right: 32px;
+                    padding-inline-end: 32px;
                 }
             }
         }
@@ -82,6 +82,17 @@
 
         li {
             padding-top: 0;
+        }
+    }
+}
+
+html[dir="rtl"], body[dir="rtl"] {
+    .account-list {
+        .address-col {
+            button.btn-edit, .f-copy-button {
+                right: unset;
+                left: 20px;
+            }
         }
     }
 }
