--- a/src/components/AccountName/_style.scss
+++ b/src/components/AccountName/_style.scss
@@ -14,12 +14,12 @@
     }
     */
 
-    text-align: left;
+    text-align: start;
 
     .an-name, > svg {
         //min-width: 100%;
         color: var(--f-primary-color);
-        //padding-right: 16px;
+        //padding-inline-end: 16px;
         //white-space: nowrap;
         //@include zpe-three-dots;
     }
@@ -29,7 +29,7 @@
     }
 
     &.an-align-right {
-        text-align: right;
+        text-align: end;
     }
 
     &.has-name {
@@ -56,10 +56,19 @@
     }
 }
 
+html[dir="rtl"], body[dir="rtl"] {
+    .account-name {
+        .metamask-account-active {
+            left: unset;
+            right: -18px;
+        }
+    }
+}
+
 @include media-max($bp-medium) {
     .account-name {
         &.an-align-right {
-            text-align: left;
+            text-align: start;
         }
 
         &.has-name {
