--- a/src/components/AddressActionsBox/_style.scss
+++ b/src/components/AddressActionsBox/_style.scss
@@ -9,23 +9,23 @@
 
         li {
             display: inline-block;
-            padding-left: 8px;
+            padding-inline-start: 8px;
         }
 
         &.vertical-mode {
             li {
                 display: block;
-                padding-left: 0;
+                padding-inline-start: 0;
 
                 > button {
                     width: 100%;
                     min-height: 3.25rem;
                     justify-content: left;
-                    padding-left: 16px;
-                    padding-right: 16px;
+                    padding-inline-start: 16px;
+                    padding-inline-end: 16px;
 
                     svg {
-                        margin-right: 8px;
+                        margin-inline-end: 8px;
                     }
                 }
             }
