--- a/src/components/DashboardActionsBox/_style.scss
+++ b/src/components/DashboardActionsBox/_style.scss
@@ -20,7 +20,7 @@
             //align-items: center;
 
             li + li {
-                margin-left: 16px;
+                margin-inline-start: 16px;
             }
         }
     }
