--- a/src/components/DefiTokenList/_style.scss
+++ b/src/components/DefiTokenList/_style.scss
@@ -27,7 +27,7 @@
         .available-balance {
             color: $light-gray-color;
             font-weight: normal;
-            text-align: right;
+            text-align: end;
         }
     }
 }
