--- a/src/components/DelegationLock/_style.scss
+++ b/src/components/DelegationLock/_style.scss
@@ -26,7 +26,7 @@
 
         .days-label {
             font-size: 48px;
-            margin-left: 8px;
+            margin-inline-start: 8px;
         }
 
         .days-label, input.text-input::placeholder {
@@ -57,7 +57,7 @@
             }
             .days-label {
                 font-size: 34px;
-                margin-left: 4px;
+                margin-inline-start: 4px;
             }
         }
 
