--- a/src/components/DelegationsInfo/_style.scss
+++ b/src/components/DelegationsInfo/_style.scss
@@ -7,8 +7,8 @@
 
     .f-tabs {
         ul {
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-inline-start: 20px;
+            margin-inline-end: 20px;
         }
     }
 }
