--- a/src/components/RestoreAccountTabs/_style.scss
+++ b/src/components/RestoreAccountTabs/_style.scss
@@ -9,7 +9,7 @@
             li {
                 &.btn {
                     flex-direction: column;
-                    margin-right: 8px;
+                    margin-inline-end: 8px;
                     min-width: 128px;
                     padding-top: 16px;
                     padding-bottom: 16px;
