--- a/src/components/SocialMediaLinks/_style.scss
+++ b/src/components/SocialMediaLinks/_style.scss
@@ -9,7 +9,7 @@
         vertical-align: middle;
 
         &:not(:last-child) {
-            padding-right: 24px;
+            padding-inline-end: 24px;
         }
 
         @include links() {
