--- a/src/components/core/FBackButton/_style.scss
+++ b/src/components/core/FBackButton/_style.scss
@@ -6,7 +6,7 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    //padding-left: 8px;
+    //padding-inline-start: 8px;
 
     &:hover {
         text-decoration: underline;
@@ -26,10 +26,19 @@
     }
 }
 
+html[dir="rtl"], body[dir="rtl"] {
+    .with-back-btn {
+        .f-back-button {
+            left: unset;
+            right: -8px;
+        }
+    }
+}
+
 /*
 @include media-max($bp-small) {
     .with-back-btn {
-        padding-left: var(--f-back-button-parent-padding-left);
+        padding-inline-start: var(--f-back-button-parent-padding-left);
     }
 }
 */
