--- a/src/components/data-tables/ValidatorList/_style.scss
+++ b/src/components/data-tables/ValidatorList/_style.scss
@@ -15,6 +15,6 @@
         width: 48px;
         height: 48px;
         border-radius: 50%;
-        margin-right: 0;
+        margin-inline-end: 0;
     }
 }
