--- a/src/components/funi/FUniswapSwap/_style.scss
+++ b/src/components/funi/FUniswapSwap/_style.scss
@@ -7,8 +7,8 @@
         &__row {
             display: flex;
             align-items: center;
-            padding-left: 16px;
-            padding-right: 16px;
+            padding-inline-start: 16px;
+            padding-inline-end: 16px;
         }
 
         .defi-label {
@@ -17,7 +17,7 @@
         }
 
         .value {
-            text-align: right;
+            text-align: end;
             padding: 0 8px;
         }
 
