--- a/src/components/windows/DepositOrBorrowTokenWindow/_style.scss
+++ b/src/components/windows/DepositOrBorrowTokenWindow/_style.scss
@@ -1,14 +1,14 @@
 .deposit-or-borrow-token-window {
     .title {
         text-align: center;
-        padding-left: 40px;
+        padding-inline-start: 40px;
     }
 
     .buttons {
         text-align: center;
 
         > * {
-            margin-right: 4px;
+            margin-inline-end: 4px;
         }
     }
 }
