--- a/src/views/AccountHistory/_style.scss
+++ b/src/views/AccountHistory/_style.scss
@@ -1,8 +1,8 @@
 .view-account-history {
     .f-tabs {
         ul {
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-inline-start: 20px;
+            margin-inline-end: 20px;
         }
     }
 }
