--- a/src/views/Defi/_style.scss
+++ b/src/views/Defi/_style.scss
@@ -117,7 +117,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 4px;
-        text-align: left;
+        text-align: start;
         height: 28px;
     }
 }
