--- a/src/views/DefiBorrowFUSD/_style.scss
+++ b/src/views/DefiBorrowFUSD/_style.scss
@@ -25,11 +25,11 @@
         }
 
         .minting-limit-col {
-            text-align: right;
+            text-align: end;
         }
 
         .right-col {
-            text-align: right;
+            text-align: end;
         }
     }
 
@@ -72,6 +72,17 @@
     .f-colored-number-range {
         color: var(--f-primary-color);
         font-weight: 600;
+    }
+}
+
+html[dir="rtl"], body[dir="rtl"] {
+    .defi-borrow-fusd {
+        .token-info {
+            &.increase {
+                right: unset;
+                left: 0;
+            }
+        }
     }
 }
 
