--- a/src/views/DefiFMint/_style.scss
+++ b/src/views/DefiFMint/_style.scss
@@ -24,7 +24,7 @@
         .btn {
             min-width: 220px;
             margin-bottom: 16px;
-            margin-right: 0;
+            margin-inline-end: 0;
         }
     }
 
