--- a/src/assets/scss/core/_layouts.scss
+++ b/src/assets/scss/core/_layouts.scss
@@ -29,12 +29,14 @@
     }
 }
 
-.view-transition-on {
-    .view-transition.min-h-100 {
-        flex-direction: row;
+@include prefers-reduced-motion(false) {
+    .view-transition-on {
+        .view-transition.min-h-100 {
+            flex-direction: row;
 
-        > * {
-            height: 100%;
+            > * {
+                height: 100%;
+            }
         }
     }
 }
