--- a/src/components/windows/TxConfirmationWindow/_style.scss
+++ b/src/components/windows/TxConfirmationWindow/_style.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/vars";
+
 .tx-confirmation-f-window {
     --f-window-padding: 32px 40px;
 
@@ -10,16 +12,17 @@
         }
     }
 
-    .transaction-success-message,
-    .transaction-reject-message {
+    .transaction-success-message, .transaction-reject-message {
         margin: 0;
     }
 }
 
-.view-transition-on {
-    .tx-confirmation-f-window {
-        .body {
-            overflow-x: hidden;
+@include prefers-reduced-motion(false) {
+    .view-transition-on {
+        .tx-confirmation-f-window {
+            .body {
+                overflow-x: hidden;
+            }
         }
     }
 }
