Adjust wallet page to be accessible

--- a/src/assets/scss/_info-box.scss
+++ b/src/assets/scss/_info-box.scss
@@ -2,7 +2,7 @@
 
 .info-box {
     .balance {
-        h3 {
+        h3, .h3 {
             font-size: 28px;
             margin-top: 0;
             margin-bottom: 0;
