Adjust fmint pages to be accessible

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -289,6 +289,8 @@ legend.h2 {
     text-align: center;
     font-size: 21px;
     line-height: 1.23;
+    margin: 0;
+    font-weight: normal;
 }
 
 .form-b.uttons {
