--- a/src/assets/scss/_focus.scss
+++ b/src/assets/scss/_focus.scss
@@ -1,4 +1,4 @@
-h1[data-focus]:focus,
+h1[data-focus]:focus, h2[data-focus]:focus, h3[data-focus]:focus,
 [data-focus-not-visible]:focus {
     outline: none;
     box-shadow: none;
