Adjust funi pages to be accessible

--- a/src/views/funi/FUniswap/_style.scss
+++ b/src/views/funi/FUniswap/_style.scss
@@ -17,7 +17,7 @@
         margin-bottom: 8px;
     }
 
-    h1.with-back-btn {
+    h1.with-back-btn, h2.with-back-btn {
         font-size: 28px;
         margin-bottom: 0;
     }
@@ -30,6 +30,11 @@
     h3, .h3 {
         font-size: 26px;
         font-weight: normal;
+    }
+
+    h4, .h4 {
+        font-size: 1rem;
+        font-weight: bold;
     }
 
     .df-data-item {
