--- a/src/components/windows/TxConfirmationWindow/_style.scss
+++ b/src/components/windows/TxConfirmationWindow/_style.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/vars";
+@import '../../../assets/scss/vars';
 
 .tx-confirmation-f-window {
     --f-window-padding: 32px 40px;
@@ -12,8 +12,15 @@
         }
     }
 
-    .transaction-success-message, .transaction-reject-message {
+    .transaction-success-message,
+    .transaction-reject-message {
         margin: 0;
+    }
+
+    &.f-window {
+        .body {
+            overflow: hidden;
+        }
     }
 }
 
