--- a/src/components/AccountName/_style.scss
+++ b/src/components/AccountName/_style.scss
@@ -58,7 +58,7 @@
 
 html[dir="rtl"], body[dir="rtl"] {
     .account-name {
-        .metamask-account-active {
+        .mm-account-active {
             left: unset;
             right: -18px;
         }
