--- a/src/components/mm/MMAccountPicker/_style.scss
+++ b/src/components/mm/MMAccountPicker/_style.scss
@@ -1,4 +1,4 @@
-.metamask-account-picker {
+.mm-account-picker {
     padding-top: 24px;
     text-align: center;
 
@@ -6,7 +6,7 @@
         padding-top: 32px;
     }
 
-    .metamask-not-installed {
+    .mm-not-installed {
         padding-bottom: 32px;
     }
 }
