--- a/src/components/mm/MMSettings/_style.scss
+++ b/src/components/mm/MMSettings/_style.scss
@@ -1,4 +1,4 @@
-.metamasksettings {
+.mmsettings {
     &_section {
         margin-bottom: 8px;
 
@@ -7,7 +7,7 @@
         }
     }
 
-    &_section + .metamasksettings_section {
+    &_section + .mmsettings_section {
         margin-top: 24px;
     }
 }
