Create std-view style

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,6 +29,7 @@
 @import "windows";
 @import "funiswap";
 @import "focus";
+@import "std-view";
 //@import "walletlink";
 //@include flexbox-layout(24);
 
