--- a/src/views/funi/FUniswap/_style.scss
+++ b/src/views/funi/FUniswap/_style.scss
@@ -1,35 +1,17 @@
 @import "../../../assets/scss/vars";
 
 .view-funiswap {
-    .main {
-        //padding-top: 32px;
+    main.main {
+        padding-top: 0;
     }
 
     .address-info-box {
         margin-bottom: 16px;
     }
 
-    h1, .h1 {
-        font-size: 42px;
-        font-weight: normal;
-        text-align: center;
-        margin-top: 0;
-        margin-bottom: 8px;
-    }
-
     h1.with-back-btn, h2.with-back-btn {
         font-size: 28px;
         margin-bottom: 0;
-    }
-
-    h2, .h2 {
-        font-size: 31px;
-        font-weight: normal;
-    }
-
-    h3, .h3 {
-        font-size: 26px;
-        font-weight: normal;
     }
 
     h4, .h4 {
